--- a/pom.xml
+++ b/pom.xml
@@ -14,17 +14,23 @@
     <name>QuizExercise</name>
 
     <properties>
-        <version.kotlin>1.1.3</version.kotlin>
-        <version.springboot>1.5.4.RELEASE</version.springboot>
-        <version.springfox>2.6.1</version.springfox>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
+
+        <version.kotlin>1.2.21</version.kotlin>
+        <kotlin.version>${version.kotlin}</kotlin.version>
+        <version.junit>4.12</version.junit>
+        <version.springboot>1.5.7.RELEASE</version.springboot>
+        <version.h2>1.4.196</version.h2>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <!--Kotlin-->
             <dependency>
                 <groupId>org.jetbrains.kotlin</groupId>
-                <artifactId>kotlin-stdlib-jre8</artifactId>
+                <artifactId>kotlin-stdlib-jdk8</artifactId>
                 <version>${version.kotlin}</version>
             </dependency>
             <dependency>
@@ -32,6 +38,13 @@
                 <artifactId>kotlin-reflect</artifactId>
                 <version>${version.kotlin}</version>
             </dependency>
+            <dependency>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-stdlib</artifactId>
+                <version>${version.kotlin}</version>
+            </dependency>
+
+            <!--Spring-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -42,8 +55,13 @@
                 <artifactId>spring-boot-starter-validation</artifactId>
                 <version>${version.springboot}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>${version.springboot}</version>
+            </dependency>
 
-            <!-- test -->
+            <!--Test-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
@@ -53,17 +71,15 @@
             <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
-                <version>1.4.195</version>
+                <version>${version.h2}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
-                <version>4.12</version>
+                <version>${version.junit}</version>
             </dependency>
-
         </dependencies>
-
     </dependencyManagement>
 
     <build>
@@ -79,7 +95,6 @@
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
         </plugins>
-
         <pluginManagement>
             <plugins>
                 <plugin>
@@ -123,8 +138,8 @@
                             </goals>
                             <configuration>
                                 <sourceDirs>
-                                    <sourceDir>${project.basedir}/src/no.gardos.quiz/main/kotlin</sourceDir>
-                                    <sourceDir>${project.basedir}/src/no.gardos.quiz/main/java</sourceDir>
+                                    <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
+                                    <sourceDir>${project.basedir}/src/main/java</sourceDir>
                                 </sourceDirs>
                             </configuration>
                         </execution>
@@ -172,7 +187,6 @@
                         </execution>
                     </executions>
                 </plugin>
-
                 <plugin>
                     <!-- Need to create self-executable uber/fat jars -->
                     <groupId>org.springframework.boot</groupId>
@@ -186,16 +200,13 @@
                         </execution>
                     </executions>
                 </plugin>
-
                 <plugin>
                     <!-- Needed for SOAP clients -->
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>jaxws-maven-plugin</artifactId>
                     <version>2.5</version>
                 </plugin>
-
             </plugins>
-
         </pluginManagement>
 
     </build>
