--- a/quiz/pom.xml
+++ b/quiz/pom.xml
@@ -8,6 +8,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>quiz</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
