Add REST API for Category entity

--- a/quiz/src/main/resources/application.properties
+++ b/quiz/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 server.contextPath=/quizrest/api
-server.port = 8080
+server.port=8080
+#Todo: temp password for easier development until proper auth is in place
+security.user.password=password
