--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
 
+        <version.java>1.8</version.java>
         <version.kotlin>1.2.21</version.kotlin>
         <kotlin.version>${version.kotlin}</kotlin.version>
         <version.junit>4.12</version.junit>
@@ -139,6 +140,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.1</version>
+                <inherited>true</inherited>
+                <configuration>
+                    <source>${version.java}</source>
+                    <target>${version.java}</target>
+                </configuration>
             </plugin>
         </plugins>
         <pluginManagement>
