Add quiz module

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,9 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8080:8080"
+  quiz:
+    build:
+      context: quiz
+      dockerfile: Dockerfile
+    ports:
+      - "8081:8080"
