Move DTOs to a separate module for easier referencing and maintenance

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>question</module>
         <module>quiz</module>
+        <module>schema</module>
     </modules>
 
     <name>QuizExercise</name>
