--- a/quiz/pom.xml
+++ b/quiz/pom.xml
@@ -13,6 +13,12 @@
     <packaging>jar</packaging>
 
     <dependencies>
+        <dependency>
+            <groupId>no.gardos</groupId>
+            <artifactId>schema</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <!--Kotlin-->
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
