--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,12 @@
 version: '3'
 
 services:
+  eureka:
+    build:
+      context: eureka
+      dockerfile: Dockerfile
+    ports:
+      - "8761:8761"
   question:
     build:
       context: question
@@ -12,4 +18,4 @@ services:
       context: quiz
       dockerfile: Dockerfile
     ports:
-      - "8081:8081"
+      - "8081:8080"
