--- a/quiz/src/main/resources/application.yml
+++ b/quiz/src/main/resources/application.yml
@@ -1,2 +1,10 @@
-server:
-  contextPath: /quizexercise/api
+eureka:
+  client:
+    healthcheck:
+      enabled: true
+    serviceUrl:
+      defaultZone: http://eureka:8761/eureka/
+
+spring:
+  application:
+    name: quiz-server
