--- a/game/pom.xml
+++ b/game/pom.xml
@@ -118,7 +118,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <finalName>quiz</finalName>
+                    <finalName>game</finalName>
                 </configuration>
             </plugin>
         </plugins>
