--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>game</module>
         <module>eureka</module>
         <module>quiz</module>
+        <module>player</module>
     </modules>
 
     <name>QuizExercise</name>
