--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,11 +23,23 @@ services:
       - "8081:8080"
     depends_on:
       - eureka
-  quiz:
+  quiz1:
     build:
       context: quiz
       dockerfile: Dockerfile
     ports:
       - "8090:8080"
+    environment:
+      - SERVICE_ID=quiz1
+    depends_on:
+      - eureka
+  quiz2:
+    build:
+      context: quiz
+      dockerfile: Dockerfile
+    ports:
+      - "8091:8080"
+    environment:
+      - SERVICE_ID=quiz2
     depends_on:
       - eureka
