--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>eureka</module>
         <module>quiz</module>
         <module>player</module>
+        <module>gateway</module>
     </modules>
 
     <name>QuizExercise</name>
@@ -123,6 +124,14 @@
                 <version>3.0.5</version>
                 <scope>test</scope>
             </dependency>
+
+            <!--Zuul-->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-netflix-core</artifactId>
+                <version>1.3.4.RELEASE</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
