--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,3 +1,16 @@
+zuul:
+  routes:
+    category:
+      path: /categories/**
+    question:
+      path: /questions/**
+    quiz:
+      path: /quizzes/**
+    game:
+      path: /games/**
+    player:
+      path: /players/**
+
 eureka:
   instance:
     preferIpAddress: true
@@ -6,6 +19,11 @@ eureka:
       enabled: true
     serviceUrl:
       defaultZone: http://eureka:8761/eureka/
+    register-with-eureka: true
+    fetch-registry: true
+
+server:
+  port: 8762
 
 spring:
   application:
