--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -11,6 +11,10 @@ zuul:
     player:
       path: /players/**
 
+management:
+  security:
+    enabled: false
+
 eureka:
   instance:
     preferIpAddress: true
@@ -18,13 +22,6 @@ eureka:
     healthcheck:
       enabled: true
     serviceUrl:
-      defaultZone: http://eureka:8761/eureka/
-    register-with-eureka: true
-    fetch-registry: true
-
-server:
-  port: 8762
-
-spring:
-  application:
-    name: gateway
+      defaultZone: http://localhost:8761/eureka/
+#    register-with-eureka: true
+#    fetch-registry: true
