--- a/quiz/src/main/resources/application.yml
+++ b/quiz/src/main/resources/application.yml
@@ -5,7 +5,7 @@ eureka:
     healthcheck:
       enabled: true
     serviceUrl:
-      defaultZone: http://eureka:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
 
 spring:
   application:
