--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,39 +15,31 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8761:8761"
-  game:
+  game-server:
     build:
       context: game
       dockerfile: Dockerfile
-#    ports:
-#      - "8080:8080"
     depends_on:
       - gateway
-  player:
+  player-server:
     build:
       context: player
       dockerfile: Dockerfile
-#    ports:
-#      - "8081:8080"
     depends_on:
       - gateway
-  quiz1:
+  quiz-server-0:
     build:
       context: quiz
       dockerfile: Dockerfile
-#    ports:
-#      - "8090:8080"
     environment:
-      - SERVICE_ID=quiz1
+      - SERVICE_ID=A
     depends_on:
       - gateway
-  quiz2:
+  quiz-server-1:
     build:
       context: quiz
       dockerfile: Dockerfile
-#    ports:
-#      - "8091:8080"
     environment:
-      - SERVICE_ID=quiz2
+      - SERVICE_ID=B
     depends_on:
       - gateway
