--- a/eureka/src/main/resources/application.yml
+++ b/eureka/src/main/resources/application.yml
@@ -1,11 +1,11 @@
 server:
-  port: 8761 #Unsure if mandatory
+  port: 8761
 
 eureka:
   instance:
-    hostname: eureka #Unsure if mandatory
+    hostname: eureka
   client:
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/ #Unsure if mandatory
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
