--- a/game/src/main/resources/application.yml
+++ b/game/src/main/resources/application.yml
@@ -9,6 +9,6 @@ eureka:
 
 spring:
   application:
-    name: game
+    name: game-server
 
-quizServerPath: http://quiz/quizzes
+quizServerPath: http://quiz-server/quizzes
