--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,3 +1,7 @@
+spring:
+  application:
+    name: gateway
+
 zuul:
   routes:
     category:
@@ -11,10 +15,6 @@ zuul:
     player:
       path: /players/**
 
-management:
-  security:
-    enabled: false
-
 eureka:
   instance:
     preferIpAddress: true
@@ -22,6 +22,4 @@ eureka:
     healthcheck:
       enabled: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-#    register-with-eureka: true
-#    fetch-registry: true
+      defaultZone: http://eureka:8761/eureka/
