--- a/quiz/src/main/resources/application.yml
+++ b/quiz/src/main/resources/application.yml
@@ -5,11 +5,11 @@ eureka:
     healthcheck:
       enabled: true
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://eureka:8761/eureka/
 
 spring:
   application:
-    name: quiz
+    name: quiz-server
 
 #Todo: Investigate docker and DBs
 #spring:
