--- a/player/src/main/resources/application.yml
+++ b/player/src/main/resources/application.yml
@@ -10,3 +10,12 @@ eureka:
 spring:
   application:
     name: player-server
+  datasource:
+    url: "jdbc:postgresql://postgres-game:5432/postgres"
+    username: "postgres"
+    password: ""
+    driver-class-name: "org.postgresql.Driver"
+  jpa:
+    database: "postgresql"
+    hibernate:
+      ddl-auto: "update"
