--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,10 @@
             <artifactId>kotlin-reflect</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-hystrix-dashboard</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.h2database</groupId>
