--- a/eureka/src/main/resources/application-docker.yml
+++ b/eureka/src/main/resources/application-docker.yml
@@ -1,9 +1,6 @@
-server:
-  port: 8761
-
 eureka:
   instance:
-    hostname: localhost
+    hostname: eureka
   client:
     registerWithEureka: false
     fetchRegistry: false
