--- a/quiz/src/main/resources/application.yml
+++ b/quiz/src/main/resources/application.yml
@@ -5,17 +5,18 @@ eureka:
     healthcheck:
       enabled: true
     serviceUrl:
-      defaultZone: http://eureka:8761/eureka/
+      defaultZone: http://localhost:8761/eureka/
 
 spring:
   application:
     name: quiz-server
   datasource:
-    url: "jdbc:postgresql://postgres-quiz:5432/postgres"
-    username: "postgres"
-    password: ""
-    driver-class-name: "org.postgresql.Driver"
+    url: "jdbc:h2:mem:"
+    driver-class-name: "org.h2.Driver"
   jpa:
-    database: "postgresql"
+    database: "h2"
     hibernate:
-      ddl-auto: "update"
+      ddl-auto: "create-drop"
+
+server:
+  port: 8081
